--- a/src/ui/ParameterDisplay.css
+++ b/src/ui/ParameterDisplay.css
@@ -6,11 +6,6 @@
     height: 24px;
 }
 
-.parameter__name {
-    position: relative;
-    top: -0.15em;
-}
-
 .parameter--focused.parameter--invalid .parameter__name {
     color: #f00;
 }
